tests/snapshots/cli__cog_runs_only_where_cog_fresh_is_enabled-2.snap
---
source: tests/cli.rs
info:
  program: aigarden
  args:
    - cog
    - "--write"
---
success: true
exit_code: 0
----- stdout -----
updated doc.md

----- stderr -----
