tests/snapshots/cli__cog_write_file_contents.snap
---
source: tests/cli.rs
expression: written
---
# Doc

<!-- ailint:cog sh "echo hello" -->
hello
<!-- ailint:end -->
