tests/snapshots/cli__cog_write_regenerates_then_check_is_clean-2.snap
---
source: tests/cli.rs
info:
  program: ailint
  args:
    - cog
    - "--check"
---
success: true
exit_code: 0
----- stdout -----
✓ ailint: checked 1 file, no findings

----- stderr -----
