tests/snapshots/cli__config_can_override_a_budget_with_a_custom_glob_and_token_metric.snap
---
source: tests/cli.rs
info:
  program: aigarden
  args:
    - check
---
success: false
exit_code: 1
----- stdout -----
notes.txt: [file-length] 2 tokens exceeds the budget of 1 for `**/*.txt`
  help: split the file or raise the `**/*.txt` budget in aigarden.toml
aigarden: 1 finding

----- stderr -----
