tests/snapshots/cli__explain_cog_fresh_documents_extend_include.snap
---
source: tests/cli.rs
info:
  program: aigarden
  args:
    - explain
    - cog-fresh
---
success: true
exit_code: 0
----- stdout -----
cog-fresh — a generated cog block matches what its generator produces now
Status: report-only

What it checks
  A generated cog block (`<!-- aigarden:cog … -->` … `<!-- aigarden:end -->`) matches what its generator produces now. Regenerate stale blocks with `aigarden cog --write`. A failing generator becomes a finding here rather than aborting the whole check run. Covers markdown files plus any `extend-include` match; `aigarden cog` acts on the same files.

Config [cog-fresh]
  extend-include (default: []) — globs of non-markdown files (e.g. `.codex/agents/*.toml`) whose cog blocks are also checked and written; `aigarden cog` exits 2 if one matches no file

Example finding
  cog block is stale — its generator now produces different output

Fix
  No autofix — a finding needs a human decision

----- stderr -----
