tests/snapshots/cli__explain_on_an_unknown_rule_is_a_clean_error_not_a_panic.snap
---
source: tests/cli.rs
info:
  program: aigarden
  args:
    - explain
    - no-such-rule
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
aigarden: unknown rule `no-such-rule`. Known rules: anchor-resolves, bare-path, code-doc-ref, cog-fresh, descriptive-anchor, file-length, import-target, link-case, link-target, markdown-style, status-header
