tests/snapshots/cli__explain_prints_a_rules_full_contract.snap
---
source: tests/cli.rs
info:
  program: aigarden
  args:
    - explain
    - markdown-style
---
success: true
exit_code: 0
----- stdout -----
markdown-style — markdown hygiene: trailing spaces, tabs, blank runs, fences, final newline
Status: fixable

What it checks
  Markdown hygiene from a curated rumdl slice: trailing spaces, hard tabs, multiple blank lines, a blank line either side of a fenced code block, a single final newline, and an opt-in paragraph-wrapping convention. Each message is prefixed with the originating rumdl rule id. A cog marker line counts as the blank line beside a fence, and a finding inside a generated cog block names the generator to fix (docs/design.md, "Cogs and markdown style").

Config [markdown-style]
  reflow (default: "off") — the paragraph-wrapping convention (rumdl MD013): "off", "wrap" (re-wrap past 80 columns), or "never-wrap" (one line per paragraph, fences and tables untouched); off because reflow rewrites prose

Example finding
  [MD009] Trailing whitespace

Fix
  `aigarden check --fix` rewrites each file in place: strips trailing spaces, converts hard tabs, collapses blank-line runs, opens a blank line either side of a fence, and ensures a single final newline (and reflows paragraphs when reflow names a mode). It never edits inside a cog block: the generator owns those bytes.

----- stderr -----
