tests/snapshots/cli__fix_repairs_markdown_style_then_a_re_check_is_clean-2.snap
---
source: tests/cli.rs
info:
  program: aigarden
  args:
    - check
---
success: true
exit_code: 0
----- stdout -----
✓ aigarden: checked 1 file, no findings

----- stderr -----
